ws_lidar/log/build_2025-01-26_20-35-17/object_avoidance/stderr.log
  File "/home/cewan/ws_lidar/install/object_avoidance/lib/python3.10/site-packages/object_avoidance/test.py", line 1
    /home/cewan/ws_lidar/src/object_avoidance/object_avoidance/rpc_obj_avoid.py
    ^
SyntaxError: invalid syntax

